web/book/tests/documentation/snapshots/documentation__book__reference__declarations__variables__variables--__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "let top_50 = (\n  from employees\n  sort salary\n  take 50\n  aggregate {total_salary = sum salary}\n)\n\nfrom top_50      # Starts a new pipeline\n"
snapshot_kind: text
---
WITH table_0 AS (
  SELECT
    salary
  FROM
    employees
  ORDER BY
    salary
  LIMIT
    50
), top_50 AS (
  SELECT
    COALESCE(SUM(salary), 0) AS total_salary
  FROM
    table_0
)
SELECT
  total_salary
FROM
  top_50
