web/book/tests/documentation/snapshots/documentation__book__reference__declarations__variables__variables--__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "let main = (from x)\n"
---
SELECT
  *
FROM
  x
