web/book/tests/documentation/snapshots/documentation__book__reference__declarations__variables__variables--__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\ntake 50\ninto first_50\n\nfrom first_50\n"
---
WITH first_50 AS (
  SELECT
    *
  FROM
    employees
  LIMIT
    50
)
SELECT
  *
FROM
  first_50
